Fri Jan 08 00:33:28 1999  George Lebl  <jirka@5z.com>

	* ui.c: fixup menus to the latest menu standards

Wed Jan 06 22:53:20 1999  George Lebl  <jirka@5z.com>

	* ui.c,main.c,callback.c,hex-document.c,ghex.h: standardized menus
	  with the new gnome-app-helper macros

1999-01-07  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-support.c: Removed the saved boolean value.

	* main.c (main): Uses the new client flags to decide, whether to
 	restore a session or not.

1999-01-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (main): open a toplevel window if session restoration
	fails.
	
1998-12-31  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-support.h: Do not include getopt.h
	* main.c: ditto

1998-12-30  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* main.c (main): Added master client's connection to 'die' signal.
	Changed how saved sessions are restored.

	* gnome-support.h: Removed unused declarations.

	* gnome-support.c: Removed unused stuff.  Uses 'rm' to discard
 	session information.
	(client_die): New function.


1998-12-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (gtk_hex_destroy): make it gtk_hex_finalize().
	* *.c: minor bugfixes, change menu paths since accellabel
	behaviour has reverted, etc.
	
1998-12-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ghex.h: #define all menu paths used in code.
	* main.c (main): use #defines for menu paths.
	* callbacks.c (view_changed_cb): use #define for menu path.

1998-12-19  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* ui.c: (gpointer) -> GINT_TO_POINTER()

1998-12-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c, ghex.h (create_dialog_title): combines a format string
	and active document's name and sets them as title to
	a dialog window.
	* callbacks.[ch] (child_changed_cb) new callback, updates
	dialog titles as active document changes.
	* main.c (main): connect child_changed_cb to child_changed
	signal.
	