@@ -1,3 +1,9 @@
+Fri Jan 08 16:21:13 1999  George Lebl  <jirka@5z.com>
+
+	* ghex.h,callbacks.h: concatenate all the strings for the path to
+	  make translating easier and to avoid translating conflicts with
+	  Edit
+
 Fri Jan 08 00:33:28 1999  George Lebl  <jirka@5z.com>
 
 	* ui.c: fixup menus to the latest menu standards
